# ls-py185-book_tracker

./: README.md  app.py  pyproject.toml  schema.sql
persistence/: database_persistence.py  session_persistence.py
templates/: book.html  book_list.html  books.html  home.html  index.html  layout.html  login.html  signup.html
